# lisp

./: Cargo.toml  README  README.md  emacs.el  examples.lisp  std.lisp  std.ls
.github/workflows/: compiler-test.yml  rust.yml
docs/: assignment.md  libraries.md  strings.md
examples/: closure.lisp  cons.lisp  fib.lisp  let.lisp  objects.lisp  weird_recursion.lisp
lust/: Cargo.toml  README  emacs.el  fib.lisp
lust-programs/: comments.lisp  euler-one.lisp  fib.lisp  format.lisp  std.lisp
lust/lust-programs/: comments.lisp  euler-one.lisp  fib.py
lust/src/: builtins.rs  bytecode.rs  interpreter.rs  lustvec.rs  pair_attempt.rs  parser.rs  symboltable.rs  tokenizer.rs  typechecker.rs
lust/std/: listutils.lisp
lust/tests/: main.lisp
lustc/: Cargo.toml  README
lustc/docs/: closures.md  grammar.md  tco.md
lustc/examples/: bad-call.lisp  cons.lisp  data-eq.lisp  data.lisp  do.lisp  error.lisp  fact.lisp  fib.lisp  file.lisp  fn.lisp  format.lisp  hello-world.lisp  is-prime.lisp  let.lisp  list.lisp  memoized_fib.lisp  primitives.lisp  scope.lisp  set.lisp  tokenizer.lisp
lustc/src/: compiler.rs  conditional.rs  conversions.rs  data.rs  debug.rs  errors.rs  escape.rs  fatal.rs  foreign.rs  gc.rs  heap.rs  lib.rs  locals.rs  location.rs  main.rs  parser.rs  primitives.rs  procedures.rs  reader.rs  renamer.rs  timer.rs  tokenbuffer.rs  tokenizer.rs
src/: builtins.rs  bytecode.rs  compiler.rs  conditional.rs  conversions.rs  data.rs  errors.rs  heap.rs  interpreter.rs  jit.rs  lib.rs  locals.rs  location.rs  lustvec.rs  main.rs  parser.rs  primitives.rs  procedures.rs  reader.rs  repl.rs  tokenbuffer.rs  tokenizer.rs  v1.rs
std/: format.lisp  listutils.lisp  mod.lisp  println.lisp  std.lisp
tests/: main.lisp  std.lisp
