[package]
name = "lustc"
version = "0.1.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
cranelift = "0.69.0"
cranelift-module = "0.69.0"
cranelift-jit = "0.69.0"
cranelift-codegen = {version = "0.69.0", features = ["unwind"]}
clap = "~2.27.0"
backtrace = "0.3"