[package]
name = "lustc"
version = "0.1.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
cranelift = "0.75.0"
cranelift-module = "0.75.0"
cranelift-jit = "0.75.0"
cranelift-native = "0.75.0"
cranelift-codegen = {version = "0.75.0", features = ["unwind"]}
clap = "~2.27.0"
backtrace = "0.3"
gimli = { version = "0.24.0", default-features = false, features = ["write"]}
object = "0.25.3"
lazy_static = "1.4.0"