[package]
name = "lustc"
version = "0.1.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
cranelift = "0.81.1"
cranelift-module = "0.81.1"
cranelift-jit = "0.81.1"
cranelift-native = "0.81.1"
cranelift-codegen = "0.81.1"
clap = "~2.27.0"
